cmake_minimum_required(VERSION 4.0)
project(algorithm)

set(CMAKE_CXX_STANDARD 20)

add_executable(algorithm main.cpp
        util.h
        leetcode/21.h
        leetcode/86.h
        leetcode/23.h
        leetcode/19.h
        leetcode/876.h
        leetcode/142.h
        leetcode/141.h
        leetcode/160.h
        leetcode/82.h
        leetcode/378.h
        leetcode/373.h
        leetcode/2.h
        leetcode/445.h
        leetcode/287.h
        leetcode/206.h
        leetcode/92.h
        leetcode/25.h
        leetcode/234.h
        leetcode/26.h
        leetcode/83.h
        leetcode/27.h
        leetcode/283.h
        leetcode/167.h
        leetcode/344.h
        leetcode/5.h
        leetcode/151.h
        leetcode/48.h
        leetcode/61.h
        leetcode/54.h)
